k8s_deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: dswz-service
spec:
  selector:
    app: dswz
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 80
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dswz
spec:
  selector:
    matchLabels:
      app: dswz
  replicas: 1
  template:
    metadata:
      labels:
        app: dswz
    spec:
      containers:
      - name: dswz
        image: cr.selcloud.ru/dswz/dswz:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
# Name the Ingress resource
  name: dswz-ingress
  annotations:
    # Use Traefik as the Ingress controller
    kubernetes.io/ingress.class: traefik
    # Add Cert-Manager SSL certificates as the name of the ClusterIssuer resource
    cert-manager.io/cluster-issuer: letsencrypt-dswz-certificate
spec:
  # TLS configuration for HTTPS
  tls:
    # TLS secretName used on ClusterIssuer
    - secretName: dswz.letsencrypt.key.tls
      hosts:
        # Replace with your domain name
        - dswz.ru
  # Create Ingress routing rules
  rules:
  # Replace with your domain name
  - host: dswz.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           # Name of your service resource
            name: dswz-service
            port:
             # Port number to forward traffic to
              number: 8080
